[package]
name = "oagain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
itertools = "0.12.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
rust-crypto = "0.2.36"
thiserror = "1.0.50"
url = "2.5.0"
hmac = { version = "0.12.1", features = [] }
sha1 = "0.10.6"
base64 = "0.21.5"
toml = "0.8.8"
log = "0.4.20"
env_logger = "0.10.1"
